src/test/ui/tag-variant-disr-dup.stderr
error[E0081]: discriminant value `0` assigned more than once
  --> $DIR/tag-variant-disr-dup.rs:3:1
   |
LL | enum Color {
   | ^^^^^^^^^^
...
LL |     Black = 0x000000,
   |             -------- `0` assigned here
LL |     White = 0x000000,
   |             -------- `0` assigned here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0081`.
